Student's view complete

--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -67,9 +67,16 @@
                             </a>
 
                             <div class="collapse" id="sbCommunity">
+                                <!-- Certification -->
                                 <ul class="navbar-nav">
                                     <a href="/certificate-registration" class="nav-link px3 border-top  border-bottom">
                                         <li class="ms-5 ps-2">Certificate Registration</li>
+                                    </a>
+                                </ul>
+                                <!-- Skills -->
+                                <ul class="navbar-nav">
+                                    <a href="/skills-registration" class="nav-link px3 border-top  border-bottom">
+                                        <li class="ms-5 ps-2">Skills</li>
                                     </a>
                                 </ul>
                             </div>
