--- a/views/registration_forms/certificate.ejs
+++ b/views/registration_forms/certificate.ejs
@@ -30,18 +30,6 @@
                     </div>
 
                     <form action="/certificate-registration" method="POST">
-                        <!-- <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Course name</label>
-                            <input type="text" class="form-control" name="credentialName" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Course provider</label>
-                            <input type="text" class="form-control" name="credentialSource" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                        </div> -->
-
                         <!-- Course name -->
                         <div class="input-box mb-3">
                             <span class="details">Course/Program: <span style="color:red">*</span> </span>
@@ -67,7 +55,7 @@
                         <!-- Date of completion  -->
                         <div class="input-box mb-3">
                             <span class="details">Date of completion: <span style="color:red">*</span> </span>
-                            <input type="date" class="form-control" name="completionDate" required>
+                            <input type="date" class="form-control" name="completionDate"  max=Date() required>
                         </div>
 
                         <!-- Completion date  -->
@@ -95,14 +83,14 @@
 
 
                         <!-- upload certificate -->
-                        <div class="input-box">
+                        <!-- <div class="input-box">
                             <span class="details">Upload Certificate: <span class="req">*</span></span>
                             <div class="drop-zone">
                                 <span class="drop-zone__prompt">Drop file here or click to upload</span>
                                 <input type="file" id="cerificate" name="cerificateFile" class="drop-zone__input"
                                     accept=".pdf,.jpg,.png" required>
                             </div>
-                        </div>
+                        </div> -->
 
                         <br>
 
