Added achievements module

--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -67,6 +67,12 @@
                             </a>
 
                             <div class="collapse" id="sbCommunity">
+                                <!-- Achievements-->
+                                <ul class="navbar-nav">
+                                    <a href="/achievements-registration" class="nav-link px3 border-top  border-bottom">
+                                        <li class="ms-5 ps-2">Achievements</li>
+                                    </a>
+                                </ul>
                                 <!-- Certification -->
                                 <ul class="navbar-nav">
                                     <a href="/certificate-registration" class="nav-link px3 border-top  border-bottom">
