--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -59,13 +59,14 @@
             </div>
 
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Class</label>
+                <label for="exampleInputEmail1" class="form-label">Class (for students) or Mentoring Class (for
+                    mentors)</label>
                 <input type="text" class="form-control" name="class" id="exampleInputEmail1"
-                    aria-describedby="emailHelp" placeholder="Enter Class" required>
+                    aria-describedby="emailHelp" placeholder="Enter Class (Eg: 20AML 2" required>
             </div>
 
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Section</label>
+                <label for="exampleInputEmail1" class="form-label">Group</label>
                 <select class="form-select" name="section" id="inputGroupSelect01">
                     <option selected>Choose...</option>
                     <option value="a">A</option>
