--- a/views/teachersview/dashboard.ejs
+++ b/views/teachersview/dashboard.ejs
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mentor Dashboard</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <!-- Side Bar -->
-    <%- include("./components/sidebar") %>
+    <%- include("./../components/sidebar") %>
 
         <!-- Body -->
         <div class="bodyContainer">
 
             <!-- Navbar -->
-            <%- include("./components/header") %>
+            <%- include("./../components/header") %>
 
                 <div class="Dashboard">
                     <nav class="navbar navbar-light bg-white">
