Working on teachers view

--- a/views/teachersview/dashboard.ejs
+++ b/views/teachersview/dashboard.ejs
@@ -30,20 +30,18 @@
 
                     <div class="row mt-2">
 
-                        <a href="#" class="cardLink col-sm-4">
+                        <a href="/mentor-dashboard/view-students" class="cardLink col-sm-4">
                             <div class="card topCards">
                                 <div class="card-body">
-                                    <h3 class="card-title">Total Students</h3>
-                                    <h1>69 </h1>
+                                    <h3 class="card-title">View Students</h3>
                                 </div>
                             </div>
                         </a>
 
-                        <a href="#" class="cardLink col-sm-4">
+                        <!-- <a href="#" class="cardLink col-sm-4">
                             <div class="card topCards">
                                 <div class="card-body">
                                     <h3 class="card-title">Certifications Registered</h3>
-                                    <h1>69 </h1>
                                 </div>
                             </div>
                         </a>
@@ -52,23 +50,9 @@
                             <div class="card topCards">
                                 <div class="card-body">
                                     <h3 class="card-title">Achievements Registered</h3>
-                                    <h1>69 </h1>
                                 </div>
                             </div>
-                        </a>
-                    </div>
-
-                    <div class="row mt-3">
-                        <div class="col-sm-4 mt-2">
-                            <a href="/professional-society-registrations" class="btn btn-primary col-12">View
-                                Entries</a>
-                        </div>
-                        <div class="col-sm-4 mt-2">
-                            <a href="#" class="btn btn-primary col-12">Download Entries</a>
-                        </div>
-                        <div class="col-sm-4 mt-2">
-                            <a href="#" class="btn btn-primary col-12">Mail</a>
-                        </div>
+                        </a> -->
                     </div>
 
                     <div class="container-fluid mt-5 col-md-6">
